tests/NormalTests/paczka1/small_fuzzy/43194565.err
Error in line 9: WJTyA58165,6
Error in line 3: eb7D A589 9,9
